--- a/src/gallery-search.html
+++ b/src/gallery-search.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 2</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>gallery</title>
   </head>
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 2</h1>
     </section>
+    <div class="container">
+      <input class="input" type="text" placeholder="Search images...">
+      <button class="button" type="submit">Search</button>
+    </div>
   </body>
 </html>
