first full update

--- a/src/gallery-search.html
+++ b/src/gallery-search.html
@@ -11,9 +11,14 @@
     <section>
       <a href="./index.html">Go to home</a>
     </section>
-    <div class="container">
+    <form class="container">
       <input class="input" type="text" placeholder="Search images...">
       <button class="button" type="submit">Search</button>
-    </div>
+    </form>
+    <ul class="gallery">
+      <div class="loader"></div>
+    </ul>
   </body>
+  <script type="module" src="./js/gallery-search.js"></script>
 </html>
+
