--- a/src/gallery-search.html
+++ b/src/gallery-search.html
@@ -19,6 +19,6 @@
       <div class="loader"></div>
     </ul>
   </body>
-  <script type="module" src="./js/gallery-search.js"></script>
+  <script type="module" src="./gallery-search.js"></script>
 </html>
 
